# todolint

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: line_analyzer.rs  line_analyzer_types.rs  main.rs  path_analyzer_types.rs  types.rs  utils.rs
test/: invalid.txt  na.txt  one_valid.txt  valid.txt
