[package]
name = "todolint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4", features = ["serde"] }
email_address = "0.2.9"
git2 = "0.19.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
rstest = "0.23.0"